--- a/DAL.Contracts/pom.xml
+++ b/DAL.Contracts/pom.xml
@@ -3,13 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>social</artifactId>
-        <groupId>org.pet</groupId>
+        <artifactId>main</artifactId>
+        <groupId>social</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>DAL.Contracts</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>social</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
