--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/social
+#Timezone fix after ?:
+spring.datasource.url=jdbc:mysql://localhost:3306/social?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=spring
 spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=create
+
+#Dialect fix:
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Server:
 server.port = 8081
+
+#To run:
+# 1) install mysql,
+# 2) create db `social`
+# 3) RUN :)
