--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>webapi</artifactId>
+    <artifactId>webapp</artifactId>
 
 
 </project>
