--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<modules>
-		<module>webapi</module>
+		<module>webapp</module>
         <module>BLL.Contracts</module>
 		<module>DAL.Contracts</module>
 		<module>BLL.Implementation</module>
