--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -14,6 +14,11 @@ server.port = 9500
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
+#Logging
+logging.level.org.springframework.web=ERROR
+logging.level.org.pet.social.BLL.implementation=DEBUG
+logging.file=logs/application.log
+
 #To run:
 # 1) install mysql,
 # 2) create db `social`
