--- a/application/pom.xml
+++ b/application/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>application</artifactId>
 
+    <build>
+        <sourceDirectory>./src/main/java</sourceDirectory>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>social</groupId>
