--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -11,6 +11,10 @@
 
   <artifactId>webapp</artifactId>
 
+  <build>
+    <sourceDirectory>./src</sourceDirectory>
+  </build>
+
   <dependencies>
 
   </dependencies>
