--- a/BLL.Contracts/pom.xml
+++ b/BLL.Contracts/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>BLL.Contracts</artifactId>
 
+    <build>
+        <sourceDirectory>./src/main/java</sourceDirectory>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>social</groupId>
