--- a/application/pom.xml
+++ b/application/pom.xml
@@ -13,6 +13,16 @@
 
     <build>
         <sourceDirectory>./src/main/java</sourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>10</source>
+                    <target>10</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
