--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Timezone fix after ?:
-spring.datasource.url=jdbc:mysql://localhost:3306/social?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/social?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=spring
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
