--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,6 +13,7 @@
 
         <build>
             <sourceDirectory>./src/main/java</sourceDirectory>
+            <outputDirectory>./target</outputDirectory>
         </build>
 
     <dependencies>
