--- a/BLL.Implementation/pom.xml
+++ b/BLL.Implementation/pom.xml
@@ -13,6 +13,7 @@
 
     <build>
         <sourceDirectory>./src/main/java</sourceDirectory>
+        <outputDirectory>./target</outputDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
